2010-08-31  Darin Adler  <darin@apple.com>

        Reviewed by Simon Fraser.

        Make DOM classes start with a reference count of 1, like all other RefCounted
        https://bugs.webkit.org/show_bug.cgi?id=28068

        * dom/Document.cpp:
        (WebCore::Document::accessSVGExtensions): Use adoptPtr instead of set.

        * dom/Document.h: Removed initialRefCount in Node constructor. It's always 1 now.

        * dom/Node.h: Removed CreateWithZeroRefCountFlag, CreateStyledElementZeroRefCount,
        CreateSVGElementZeroRefCount, and initialRefCount.

        * platform/TreeShared.h: Removed initialRefCount argument. It's always 1 now.

        * rendering/RenderSVGShadowTreeRootContainer.cpp:
        (WebCore::RenderSVGShadowTreeRootContainer::updateFromElement): Use create
        instead of new.

        * rendering/SVGResources.h: Inherit from Noncopyable.

        * rendering/SVGResourcesCache.cpp:
        (WebCore::SVGResourcesCache::~SVGResourcesCache): Removed unneeded special
        case code.

        * rendering/SVGShadowTreeElements.cpp:
        (WebCore::SVGShadowTreeContainerElement::create): Added.
        (WebCore::SVGShadowTreeRootElement::SVGShadowTreeRootElement): Made argument
        type more specific.
        (WebCore::SVGShadowTreeRootElement::create): Added.
        * rendering/SVGShadowTreeElements.h: Added create functions, and made the
        argument type more specific.

        * svg/SVGDocumentExtensions.cpp:
        (WebCore::SVGDocumentExtensions::SVGDocumentExtensions): Use adoptPtr.
        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::dataChanged): Use adoptPtr instead of set.

        * svg/SVGElement.cpp:
        (WebCore::SVGElement::SVGElement): Use CreateSVGElement instead of
        CreateSVGElementZeroRefCount.
        (WebCore::SVGElement::create): Use adoptRef.

        * wml/WMLElement.cpp:
        (WebCore::WMLElement::WMLElement): Use CreateStyledElement instead of